fixed overlapping of article

--- a/public/themes.css
+++ b/public/themes.css
@@ -33,15 +33,25 @@ article{
   border-radius: 6vmin;
   z-index: 0;
   position: relative;
-  width: 500px;
-  top: 70px;
-  left: 70px;
-  text-indent: 50px;
+  width: 42vw;
+  top: 120px;
+  left: 5%;
   background-color: rgb(168, 241, 241);
+
 }
-.content{
-left: 10px;
+article p{
+  position: relative;
+  left: 5%;
 }
+article h2{
+  text-align: center;
+}
+about article{
+  position:relative; 
+  top: -254px;
+  left: 51vw;
+}
+
 .logo{
   pointer-events: none;
   background-color: rgb(255, 255, 255);
@@ -65,7 +75,7 @@ left: 10px;
   color: black;
   position: fixed;
    top: 20px;
-  left: 76%;
+  left: 74vw;
   }
 .navigation {
   z-index: 1;
@@ -161,17 +171,6 @@ transform: translateY(-15px);
   display: none;
 }
 @media only screen and (max-width: 1000px) {
-  .login{
-    right: 0vmin;
-  }
-.navigation{
-  top: 0px;
-  left: 35%;
-}
-.welcome{
-  left: 75%;
-}
-@media only screen and (max-width: 963px) {
 .navigation{
   left: 22%;
   width: 200px;
@@ -187,25 +186,28 @@ transform: translateY(-15px);
 .dropdown{
   opacity: 0;
 }
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 870px) {
+  article{
+    width: 88%;
+  }
+  about article{
+    top: 150px;
+    left: 5%;
+  }
+@media only screen and (max-width: 720px) {
 .navigation{
   top: -7px;
+  left: 50vw;
   background: none;
 }
 
 .welcome{
   display: none;
 }
+@media only screen and (max-width: 640px) {
 .name_text{
-  white-space: initial;
-  font-size: 2vh;
-  top: 6px;
-}
-@media only screen and (max-width: 600px) {
-
-.name_text{
-  font-size: 1.5vh;
-  top: 10px;
+  font-size: 1.5vw;
+  top: 5px;
 }
 .navigation ul li{
   width: 40px;
@@ -213,12 +215,19 @@ transform: translateY(-15px);
   display: inline-block;
 }
 @media only screen and (max-width: 530px) {
+  html{
+    height: 200%
+  }
+  .name_text{
+    font-size: 1.7vw;
+    top: 11px;
+  }
   .navigation ul li{
     display:none;
     
   }
   .login{
-    right: 3vh;
+    right: 4vh;
     background: none;
     top: -7px;
   }
@@ -268,7 +277,11 @@ transform: translateY(0px);
       opacity: 1;
     }
   
-
+    @media only screen and (max-width: 300px) {
+      .name_text{
+        display: none;
+      }
+    }
 
 }
 }
